- Feature: Linux 64 bit support for a minimal build added (64 bit support for optional projects not yet added)
- Feature: Added basic PLDemoRendererTexturing demo
- Feature: Added "PLEngine::SceneRendererTool" helper class for simplified scene renderer access
- Feature: Autodesk 3ds Max 2011 scene exporter added
- Feature: Performance improvements within the string implementation
- Change: Integrated "PLCompositing::SRPPostProcessing" into the compositing system, now it's possible to use post processing within the deferred scene renderer
- Change: Moved nearly all compositing relevant classes from PLScene to PLCompositing
- Change: Scene graph update refactoring for less CPU usage
- Change: All file loader implementations now also have versions of the filename extensions written in capital letters (e.g. beside "tga" also "TGA")
- Change: Updated libpng from "1.2.44" to "1.4.5"


Changes in PixelLight 0.9.3-R1 (released on October 23, 2010)
- Feature: Added support for "LATC1" and "LATC2" (formally "3DC"/"ATI1N"/"ATI2N" on ATI GPU's only) texture compression
- Feature: Cg shader language support is now optional (PLRendererOpenGLCg plugin) instead of directly build in within PLRendererOpenGL
- Feature: Deferred scene renderer and HDR compositing steps are now supporting GLSL as well instead of just Cg
- Feature: Added MinGW support to the header file "PLGeneralWindows.h" from "PLGeneral"
- Feature: Input control scene nodes and scene node modifiers are now using virtual input controllers instead of accessing input devices directly
- Feature: Within "PLScene::SceneApplication::OnInputControllerFound()", input control can be changed (e.g. assigning other keys)
- Feature: Deferred scene renderer performance improvements (if the CPU is the bottleneck)
- Change: Updated from "Cg Toolkit 2.2, February 2010 Release" to "Cg Toookit 3.0 - July 2010"