@@ -2253,6 +2253,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\PLGeneral\String\QtStringAdapter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\String\RegEx.cpp"
 				>
 				<FileConfiguration
