@@ -13,6 +13,7 @@
 \item{XML classes (DOM) making it comfortable to load, edit and save XML files}
 \item{Regular expression class\footnote{Internally PCRE (\url{http://www.pcre.org/}) is used}}
 \item{Extensive command line parser}
+\item{Static adapter class for mapping Qt\footnote{Qt is a cross-platform application and UI framework, \url{http://qt.nokia.com/}} strings to PixelLight strings and vice versa}
 \end{itemize}
 
 
